WendzelNNTPd History:
---------------------
16-Jan-2023 - Implemented Option "openssl-cipher-suites" to select
              TLS 1.3 cipher suites.
15-Jan-2023 - Change behaviort of IPv6 "listen ::" in connector.
              It is now IPV6-Only!
30-Dez-2022 - Implemented Client certificate verify and CRL checks!
04-Dez-2022 - Implemented TLS, improve signal handler!
18-Oct-2021 - 17 years of WendzelNNTPd!
17-Apr-2021 - WendzelNTTPd 2.1.3 released (62th vers., 49th rel.)!
29-Mar-2021 - WendzelNNTPd 2.1.2 released (61st vers., 48th rel.)!
05-Jan-2021 - WendzelNNTPd 2.1.1 released (60th vers., 47th rel.)!
04-Jan-2021 - WendzelNNTPd 2.1.0 released! The first major subversion
                since 2011 (59th vers., 46th release)!
12-Nov-2020 - WendzelNNTPd is now considered a fun+retro computing
                project! If you like to run a Gopher server, you might
                also enjoy running your own tiny Usenet server on some
                ancient hardware :)
18-Oct-2020 - 16 years of WendzelNNTPd!
18-Oct-2019 - 15 years of WendzelNNTPd!
23-Dec-2017 - Released v. 2.0.9 (58th vers., 45th release).
18-Oct-2017 - 13 years of WendzelNNTPd!
31-Jan-2017 - Released v. 2.0.8 (57th vers., 44th release).
18-Oct-2016 - 12 years of WendzelNNTPd!
18-Oct-2015 - 11 years of WendzelNNTPd! Released v. 2.0.7 (56th ver.,
		43th release) on Oct-26-2015.
30-Jul-2015 - Moved from SourceForge.net to Github (after 599 SVN
		commits).
28-Mar-2015 - Build #2.500; released v. 2.0.4 (=40th release so far).
18-Oct-2014 - 10 years of WendzelNNTPd!
12-Aug-2012 - v. 2.0.1-stable, 50th ver.
20-Jun-2011 - WendzelNNTPd-2.0.0-stable released with no additional
		non-documentation changes since 2.0.0-beta.
26-Feb-2011 - Released WendzelNNTPd-2.0.0-beta (currently without the
		Windows port. (7150 LOC)
05-Jan-2010 - Reached 7500 LOC mark (>7600 at the moment) due to an
		additional very intensive hacking session within the
		last 1,5 days. MySQL support added.