@@ -1,5 +1,6 @@
 WendzelNNTPd History:
 ---------------------
+22-Jan-2023 - Improved config file parsind and some defaults.
 16-Jan-2023 - Implemented Option "openssl-cipher-suites" to select
               TLS 1.3 cipher suites.
 15-Jan-2023 - Change behaviort of IPv6 "listen ::" in connector.
